upgraded django from 2.2.10 to 3.0.4

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-certifi==2019.6.16
+asgiref==3.2.5
+cachetools==4.0.0
+certifi==2019.11.28
 chardet==3.0.4
-Django==2.2.4
-django-crispy-forms==1.7.2
-idna==2.8
-psycopg2==2.8.3
-pytz==2019.2
-requests==2.22.0
-sqlparse==0.3.0
-urllib3==1.25.3
+Django==3.0.4
+django-crispy-forms==1.9.0
+idna==2.9
+psycopg2==2.8.4
+pytz==2019.3
+requests==2.23.0
+sqlparse==0.3.1
+urllib3==1.25.8
